--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,8 @@
 theme: minima
-title: DeV
+---
+title: "Devopd"
 date: 2020-06-16
+---
 author: GdesMers
 email: your-email@domain.com
 description: > # this means to ignore newlines until "baseurl:"
